--- a/src/strapi_data_replicator/modules/services/databases.rs.html
+++ b/src/strapi_data_replicator/modules/services/databases.rs.html
@@ -95,4 +95,5 @@
 <span class="comment">// TODO: Add trait impl. for basic / standard database class -&gt; basic interface</span>
 <span class="comment">// TODO: Add postgres support</span>
 </pre></div>
-</section><section id="search" class="content hidden"></section><section class="footer"></section><script>window.rootPath = "../../../../";window.currentCrate = "strapi_data_replicator";</script><script src="../../../../main.js"></script><script src="../../../../source-script.js"></script><script src="../../../../source-files.js"></script><script defer src="../../../../search-index.js"></script></body></html>
+</section><section id="search" class="content hidden"></section><section class="footer"></section><div id="rustdoc-vars" data-root-path="../../../../" data-current-crate="strapi_data_replicator"></div>
+    <script src="../../../../main.js"></script><script src="../../../../source-script.js"></script><script src="../../../../source-files.js"></script><script defer src="../../../../search-index.js"></script></body></html>
